--- a/Natives/CMakeLists.txt
+++ b/Natives/CMakeLists.txt
@@ -109,6 +109,7 @@ add_executable(AngelAuraAmethyst
   authenticator/BaseAuthenticator.m
   authenticator/LocalAuthenticator.m
   authenticator/MicrosoftAuthenticator.m
+  authenticator/ElyByAuthenticator.m
 
   ctxbridges/gl_bridge.m
   ctxbridges/osm_bridge.m
