--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -19,7 +19,7 @@ jobs:
           - platform: 2
             platform_name: ios
     
-    runs-on: macos-latest
+    runs-on: macos-15
     steps:
       - name: Remove work folders
         run: |
@@ -35,11 +35,6 @@ jobs:
 
       - name: Checkout repository submodules
         run: git submodule update --init --recursive
-
-      - name: Setup Xcode
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: '15.4'
 
       - name: Get gl4es latest commit hash
         id: gl4es-sha
